# Uber_dos_Servicos

./: CMakeLists.txt  cadastrar_usuario.cpp  cadastrar_usuario.h  cadastrar_usuario.ui  conexao.h  login.cpp  login.h  login.ui  recursos.qrc  servico.cpp  servico.h  servico.ui  tst_login.qml  usuario.cpp  usuario.h  usuario.ui  variavel_global.h
